--- a/views/products/products.ejs
+++ b/views/products/products.ejs
@@ -240,15 +240,15 @@
             <table class="table custom-mobile-table" id="products-dataTable" width="100%" cellspacing="10">
                 <thead class="table-header">
                     <tr>
-                        <th>ID</th>
+                        <th class="text-left">ID</th>
                         <th>Image</th>
-                        <th>Description</th>
-                        <th>Price</th>
-                        <th>Cost</th>
-                        <th>Category</th>
-                        <th>Barcode</th>
-                        <th>Created by</th>
-                        <th>Created Date</th>
+                        <th class="text-left">Description</th>
+                        <th class="text-left">Price</th>
+                        <th class="text-left">Cost</th>
+                        <th class="text-left">Category</th>
+                        <th class="text-left">Barcode</th>
+                        <th class="text-left">Created by</th>
+                        <th class="text-left">Created Date</th>
                         <th class="col-1">Status</th>
                         <th class="col-1"></th>               
                     </tr>
