--- a/views/access/access.ejs
+++ b/views/access/access.ejs
@@ -16,17 +16,17 @@
                     <div class="card-body">
                         <div class="row mb-2">
                             <div class="col-md-6">
-                                <label class="form-label" for="mu_password">Access Code</label>
+                                <label class="form-label" for="accesscode">Access Code</label>
                                 <input autocomplete="off" id="accesscode" name="accesscode" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1" disabled>        
                             </div>
                             <div class="col-md-6">
-                                <label class="form-label" for="mu_password">Current Access Name</label>
+                                <label class="form-label" for="currentAccessName">Current Access Name</label>
                                 <input autocomplete="off" id="currentAccessName" name="currentAccessName" type="text" class="form-control" placeholder="Enter new Access name" aria-label="fullname" aria-describedby="basic-addon1" disabled>        
                             </div>
                         </div>
                         <div class="row mb-2 justify-content-center">
                             <div class="col-md-6">
-                                <label class="form-label" for="mu_password">Access Name</label>
+                                <label class="form-label" for="accessnamemodal">Access Name</label>
                                 <input autocomplete="off" id="accessnamemodal" name="accessnamemodal" type="text" class="form-control" placeholder="Enter new Access name" aria-label="fullname" aria-describedby="basic-addon1">        
                             </div>
                         </div>
