--- a/views/inventoryhistory/inventoryhistory.ejs
+++ b/views/inventoryhistory/inventoryhistory.ejs
@@ -51,7 +51,7 @@
                                     <tr>
                                         <th class="text-left col-1">ID</th>
                                         <th class="text-left col-2">Product</th>
-                                        <th class="text-left col-1">Barcode</th>
+                                        <th class="text-left col-1">SKU</th>
                                         <th class="text-left col-2">Branch</th>
                                         <th class="text-left col-1">Quantity</th>
                                         <th class="text-left col-2">Type</th>
