--- a/views/location/locationscripts.ejs
+++ b/views/location/locationscripts.ejs
@@ -26,7 +26,6 @@
         $(this).closest('tr').find('td').each(function () {
             dataRow.push($(this).text());
         });
-        console.log(dataRow);
         locationid = dataRow[0];
         locationname = dataRow[1];
         status = dataRow[4];
@@ -86,8 +85,6 @@
         })
 
         $(document).on('click', '#activeBtn', function(){
-            console.log(locationid);
-            console.log(status);
             $.ajax({
                     type: 'POST',
                     url: '/location/status',
@@ -113,8 +110,6 @@
         });
 
         $(document).on('click', '#inactiveBtn', function(){
-            console.log(locationid);
-            console.log(status);
             $.ajax({
                     type: 'POST',
                     url: '/location/status',
@@ -140,7 +135,6 @@
         });
 
         function populateLocationTable(data) {
-            console.log(data);
             const tableBody = $('#location-dataTable tbody');
             tableBody.empty();
 
@@ -170,7 +164,7 @@
                         $('<td>', { text: item.locationid, 'data-label': 'Location Code', class: 'custom-mobile-align' }),
                         $('<td>', { text: item.locationname, 'data-label': 'Location Name', class: 'custom-mobile-align' }),
                         $('<td>', { text: item.createdby, 'data-label': 'Created By', class: 'custom-mobile-align' }),
-                        $('<td>', { text: item.createddate, 'data-label': 'Created Date', class: 'custom-mobile-align' }),
+                        $('<td>', { text: ConvertDate(item.createddate), 'data-label': 'Created Date', class: 'custom-mobile-align' }),
                         $('<td>', { class: 'custom-mobile-align', 'data-label': 'Status' }).append(
                             $('<div>', { class: containerBackground }).append(
                             $('<span>', { text: item.status, class: statusBackground })
