--- a/views/position/position.ejs
+++ b/views/position/position.ejs
@@ -16,17 +16,17 @@
                     <div class="card-body">
                         <div class="row mb-2 justify-content-center">
                             <div class="col-md-6">
-                                <label class="form-label" for="mu_password">Position Code</label>
+                                <label class="form-label" for="positioncode">Position Code</label>
                                 <input autocomplete="off" autocomplete="off" id="positioncode" name="positioncode" type="text" class="form-control" aria-describedby="basic-addon1" disabled>        
                             </div>
                             <div class="col-md-6">
-                                <label class="form-label" for="mu_password">Current Position Name</label>
+                                <label class="form-label" for="currentPositionName">Current Position Name</label>
                                 <input autocomplete="off" id="currentPositionName" name="currentPositionName" type="text" class="form-control" placeholder="Enter new Position name" aria-label="fullname" aria-describedby="basic-addon1" disabled>        
                             </div>
                         </div>
                         <div class="row mb-2 justify-content-center">
                             <div class="col-md-6">
-                                <label class="form-label" for="mu_password">New Position Name</label>
+                                <label class="form-label" for="positionnamemodal">New Position Name</label>
                                 <input autocomplete="off" id="positionnamemodal" name="positionnamemodal" type="text" class="form-control" placeholder="Enter new Position name" aria-label="fullname" aria-describedby="basic-addon1">        
                             </div>
                         </div>
