--- a/views/materialcount/materialcount.ejs
+++ b/views/materialcount/materialcount.ejs
@@ -47,8 +47,7 @@
                                     <th class="text-left">ID</th>
                                     <th class="text-left">Material Name</th>
                                     <th class="text-left">Stocks</th>
-                                    <th class="text-left">Created By</th>
-                                    <th class="text-left">Created Date</th>
+                                    <th class="text-left">Updated Date</th>
                                     <th class="col-1">Status</th>
                                     <th class="col-1"></th>
                                 </tr>
