--- a/views/access/access.ejs
+++ b/views/access/access.ejs
@@ -76,7 +76,7 @@
     </div>
 
     <div class="card mb-4 cardbody-size-580 shadow">
-        <div class="progress progress-sm mb-2">
+        <div id="progress" class="progress progress-sm mb-2">
             <div class="progress-bar" role="progressbar" style="width: 0%"
                 aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
